# netoproc

./: .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
completions/: netoproc.fish
docs/: BPF_REFINE.md  DESIGN.md  REQUIREMENTS.md  SNAPSHOT-TESTS.md  USAGE.md  netoproc-0.2.0-design.md  netoproc-bpf-refine.md  netoproc-design.md  netoproc-ebpf-capture-design.md  netoproc-ebpf-linux-research.md  netoproc-linux-compat.md  netoproc-macos-permission.md  netoproc-requirements.md  netoproc-snapshot-tests.md  netoproc-unknown-enrichment.md  netoproc-usage.md  netoproc-windows-compat.md
netoproc-ebpf/: Cargo.toml
netoproc-ebpf-common/: Cargo.toml
netoproc-ebpf-common/src/: lib.rs
netoproc-ebpf/src/: main.rs
scripts/: install-bpf.sh  install-linux.sh  uninstall-bpf.sh  uninstall-linux.sh
src/: cli.rs  dns.rs  error.rs  lib.rs  main.rs  packet.rs  privilege.rs
src/bpf/: dns.rs  filter.rs  mod.rs  packet.rs
src/capture/: ebpf.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/enrichment/: dns_resolver.rs  ip_annotation.rs  mod.rs  port_annotation.rs
src/model/: correlation.rs  mod.rs  timeseries.rs  traffic.rs
src/output/: json.rs  mod.rs  pretty.rs  tsv.rs
src/process/: linux.rs  macos.rs  mod.rs  windows.rs
src/state/: merge.rs  mod.rs
src/system/: connection.rs  dns_config.rs  interface.rs  mod.rs  process.rs
src/tui/: event.rs  mod.rs  theme.rs
src/tui/views/: connection.rs  dns.rs  interface.rs  mod.rs  process.rs
src/tui/widgets/: filter_bar.rs  mod.rs  rate.rs  sparkline.rs
tests/: ebpf_integration.rs  enrichment_integration.rs  linux_integration.rs  linux_proc_parsing.rs  snapshot_integration.rs  windows_compat.rs  windows_integration.rs
