[package]
name = "netoproc"
version = "0.4.0"
edition = "2024"
description = "Per-process network traffic monitor for macOS and Linux"
license = "MIT"
repository = "https://github.com/XuanLee-HEALER/netoproc"
readme = "README.md"
keywords = ["network", "monitor", "tui", "macos", "linux"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arc-swap = "1"
crossbeam-channel = "0.5"
libc = "0.2"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rustc-hash = "2"
dns-lookup = "2"

[features]
default = []
# Phase 1: ebpf feature enables detection code and stub backend.
# Phase 2: will add aya dependency here once eBPF framework is finalized.
# Note: aya v0.13 transitively pulls in tokio, which conflicts with the
# project's no-tokio policy. Phase 2 must either use aya without tokio,
# choose an alternative (libbpf-rs), or formally amend the policy.
ebpf = []
